--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
     </p>
   </header>
 
-  <!-- Vimeo Showreel -->
-  <section class="flex justify-center p-6">
-    <div class="w-full max-w-4xl aspect-video">
-      <iframe 
-        class="w-full h-full rounded-lg shadow-lg"
-        src="https://player.vimeo.com/video/991421399?title=0&byline=0&portrait=0"
-        frameborder="0"
-        allow="fullscreen"
-      ></iframe>
-    </div>
-  </section>
+<!-- Vimeo Showreel -->
+<section class="flex justify-center p-6">
+  <div class="w-full max-w-7xl aspect-video px-4">
+    <iframe 
+      class="w-full h-full rounded-lg shadow-lg"
+      src="https://player.vimeo.com/video/991421399?title=0&byline=0&portrait=0"
+      frameborder="0"
+      allow="fullscreen"
+    ></iframe>
+  </div>
+</section>
 
   <!-- Navigation Buttons -->
   <nav class="flex justify-center gap-6 p-8">
