--- a/works.html
+++ b/works.html
@@ -18,7 +18,7 @@
   <main class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 px-6 pb-20 max-w-7xl mx-auto">
     
     <!-- AI Films -->
-    <a href="ai-films.html" class="group block cursor-pointer">
+    <a href="works/ai-films.html" class="group block cursor-pointer">
       <div class="aspect-video bg-gray-800 rounded-lg overflow-hidden shadow-lg group-hover:scale-105 transition-transform">
         <img src="https://via.placeholder.com/1280x720.png?text=AI+Films" alt="AI Films" class="w-full h-full object-cover opacity-70 group-hover:opacity-100 transition">
       </div>
