--- a/works.html
+++ b/works.html
@@ -8,6 +8,15 @@
 </head>
 <body class="bg-black text-white font-sans">
 
+  <!-- Top Navigation -->
+<nav class="flex justify-center gap-6 text-sm py-6 border-b border-white/10">
+  <a href="index.html" class="hover:underline">Home</a>
+  <a href="works.html" class="hover:underline">Works</a>
+  <a href="recognitions.html" class="hover:underline">Recognitions</a>
+  <a href="writings.html" class="hover:underline">Writings</a>
+  <a href="about.html" class="hover:underline">About</a>
+</nav>
+
   <!-- Header -->
   <header class="text-center py-10 px-4">
     <h1 class="text-4xl md:text-6xl font-extrabold mb-4">GOING PLACES FOR BRANDS.</h1>
