--- a/works/ai-films.html
+++ b/works/ai-films.html
@@ -8,6 +8,14 @@
 </head>
 <body class="bg-black text-white font-sans">
 
+  <nav class="flex justify-center gap-6 text-sm py-6 border-b border-white/10">
+  <a href="../index.html" class="hover:underline">Home</a>
+  <a href="../works.html" class="hover:underline">Works</a>
+  <a href="../recognitions.html" class="hover:underline">Recognitions</a>
+  <a href="../writings.html" class="hover:underline">Writings</a>
+  <a href="../about.html" class="hover:underline">About</a>
+</nav>
+
   <!-- Header -->
   <header class="text-center py-10 px-4">
     <h1 class="text-4xl md:text-5xl font-extrabold mb-4">AI Films</h1>
