--- a/works.html
+++ b/works.html
@@ -35,7 +35,7 @@
     </a>
 
     <!-- Live Action -->
-    <a href="live-action.html" class="group block cursor-pointer">
+    <a href="works/live-action.html" class="group block cursor-pointer">
       <div class="aspect-video bg-gray-800 rounded-lg overflow-hidden shadow-lg group-hover:scale-105 transition-transform">
         <img src="https://via.placeholder.com/1280x720.png?text=Live+Action" alt="Live Action" class="w-full h-full object-cover opacity-70 group-hover:opacity-100 transition">
       </div>
