--- a/works.html
+++ b/works.html
@@ -43,7 +43,7 @@
     </a>
 
     <!-- Animation -->
-    <a href="animation.html" class="group block cursor-pointer">
+    <a href="works/animation.html" class="group block cursor-pointer">
       <div class="aspect-video bg-gray-800 rounded-lg overflow-hidden shadow-lg group-hover:scale-105 transition-transform">
         <img src="https://via.placeholder.com/1280x720.png?text=Animation" alt="Animation" class="w-full h-full object-cover opacity-70 group-hover:opacity-100 transition">
       </div>
@@ -51,7 +51,7 @@
     </a>
 
     <!-- Documentary -->
-    <a href="documentary.html" class="group block cursor-pointer">
+    <a href="works/documentary.html" class="group block cursor-pointer">
       <div class="aspect-video bg-gray-800 rounded-lg overflow-hidden shadow-lg group-hover:scale-105 transition-transform">
         <img src="https://via.placeholder.com/1280x720.png?text=Documentary" alt="Documentary" class="w-full h-full object-cover opacity-70 group-hover:opacity-100 transition">
       </div>
@@ -59,7 +59,7 @@
     </a>
 
     <!-- Branded Content -->
-    <a href="branded-content.html" class="group block cursor-pointer">
+    <a href="works/branded-content.html" class="group block cursor-pointer">
       <div class="aspect-video bg-gray-800 rounded-lg overflow-hidden shadow-lg group-hover:scale-105 transition-transform">
         <img src="https://via.placeholder.com/1280x720.png?text=Branded+Content" alt="Branded Content" class="w-full h-full object-cover opacity-70 group-hover:opacity-100 transition">
       </div>
