--- a/works/documentary.html
+++ b/works/documentary.html
@@ -25,91 +25,91 @@
 <!-- Nanjing Duck Blood Soup -->
 <div class="aspect-w-16 aspect-h-9">
   <iframe class="w-full h-full rounded-lg shadow-lg" src="https://www.youtube.com/embed/U1UfnKfDSvU" title="Nanjing Duck Blood Soup" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <p class="mt-2 text-sm text-gray-300">Nanjing Duck Blood Soup</p>
+  <p class="mt-2 text-sm text-gray-300 text-center">Nanjing Duck Blood Soup</p>
 </div>
 
 <!-- Shanghai on Air -->
 <div class="aspect-w-16 aspect-h-9">
   <iframe class="w-full h-full rounded-lg shadow-lg" src="https://www.youtube.com/embed/G3O-Y1c3ck8" title="Shanghai on Air" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <p class="mt-2 text-sm text-gray-300">Shanghai on Air</p>
+  <p class="mt-2 text-sm text-gray-300 text-center">Shanghai on Air</p>
 </div>
 
 <!-- Copy of Her Echo -->
 <div class="aspect-w-16 aspect-h-9">
   <iframe class="w-full h-full rounded-lg shadow-lg" src="https://www.youtube.com/embed/8nxaF3Z3gzM" title="Copy of Her Echo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <p class="mt-2 text-sm text-gray-300">Copy of Her Echo</p>
+  <p class="mt-2 text-sm text-gray-300 text-center">Copy of Her Echo</p>
 </div>
 
 <!-- Pure. -->
 <div class="aspect-w-16 aspect-h-9">
   <iframe class="w-full h-full rounded-lg shadow-lg" src="https://www.youtube.com/embed/CSOxP1C2zKg" title="Pure." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <p class="mt-2 text-sm text-gray-300">Pure.</p>
+  <p class="mt-2 text-sm text-gray-300 text-center">Pure.</p>
 </div>
 
 <!-- 2024 INK Tattoo Festival Shanghai -->
 <div class="aspect-w-16 aspect-h-9">
   <iframe class="w-full h-full rounded-lg shadow-lg" src="https://www.youtube.com/embed/QLFLYdA394E" title="2024 INK Tattoo Festival Shanghai" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <p class="mt-2 text-sm text-gray-300">2024 INK Tattoo Festival Shanghai</p>
+  <p class="mt-2 text-sm text-gray-300 text-center">2024 INK Tattoo Festival Shanghai</p>
 </div>
 
 <!-- The Unreasonables Season Trailer -->
 <div class="aspect-w-16 aspect-h-9">
   <iframe class="w-full h-full rounded-lg shadow-lg" src="https://player.vimeo.com/video/457391215" title="The Unreasonables Season Trailer" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-  <p class="mt-2 text-sm text-gray-300">The Unreasonables Season Trailer</p>
+  <p class="mt-2 text-sm text-gray-300 text-center">The Unreasonables Season Trailer</p>
 </div>
 
 <!-- Life Around Pizza -->
 <div class="aspect-w-16 aspect-h-9">
   <iframe class="w-full h-full rounded-lg shadow-lg" src="https://www.youtube.com/embed/_S4oHJzknxI" title="Life Around Pizza" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <p class="mt-2 text-sm text-gray-300">Life Around Pizza</p>
+  <p class="mt-2 text-sm text-gray-300 text-center">Life Around Pizza</p>
 </div>
 
 <!-- Radioactivity -->
 <div class="aspect-w-16 aspect-h-9">
   <iframe class="w-full h-full rounded-lg shadow-lg" src="https://www.youtube.com/embed/VQKfqy8eeeg" title="Radioactivity" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <p class="mt-2 text-sm text-gray-300">Radioactivity</p>
+  <p class="mt-2 text-sm text-gray-300 text-center">Radioactivity</p>
 </div>
 
 <!-- The Iron Hammer Trailer -->
 <div class="aspect-w-16 aspect-h-9">
   <iframe class="w-full h-full rounded-lg shadow-lg" src="https://player.vimeo.com/video/421297655" title="The Iron Hammer Trailer" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-  <p class="mt-2 text-sm text-gray-300">The Iron Hammer Trailer</p>
+  <p class="mt-2 text-sm text-gray-300 text-center">The Iron Hammer Trailer</p>
 </div>
 
 <!-- Body Song -->
 <div class="aspect-w-16 aspect-h-9">
   <iframe class="w-full h-full rounded-lg shadow-lg" src="https://www.youtube.com/embed/HOoRVfW957w" title="Body Song" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <p class="mt-2 text-sm text-gray-300">Body Song</p>
+  <p class="mt-2 text-sm text-gray-300 text-center">Body Song</p>
 </div>
 
 <!-- Message -->
 <div class="aspect-w-16 aspect-h-9">
   <iframe class="w-full h-full rounded-lg shadow-lg" src="https://www.youtube.com/embed/Z6ylgZUIG0M" title="Message" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <p class="mt-2 text-sm text-gray-300">Message</p>
+  <p class="mt-2 text-sm text-gray-300 text-center">Message</p>
 </div>
 
 <!-- 行动的真迹工作坊 -->
 <div class="aspect-w-16 aspect-h-9">
   <iframe class="w-full h-full rounded-lg shadow-lg" src="https://www.youtube.com/embed/cHc0NLUEh18" title="行动的真迹工作坊" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <p class="mt-2 text-sm text-gray-300">行动的真迹工作坊</p>
+  <p class="mt-2 text-sm text-gray-300 text-center">行动的真迹工作坊</p>
 </div>
 
 <!-- 亲子工作坊 -->
 <div class="aspect-w-16 aspect-h-9">
   <iframe class="w-full h-full rounded-lg shadow-lg" src="https://www.youtube.com/embed/K3oP2urNyfQ" title="亲子工作坊" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <p class="mt-2 text-sm text-gray-300">亲子工作坊</p>
+  <p class="mt-2 text-sm text-gray-300 text-center">亲子工作坊</p>
 </div>
 
 <!-- Tracing Ben (part 1) -->
 <div class="aspect-w-16 aspect-h-9">
   <iframe class="w-full h-full rounded-lg shadow-lg" src="https://www.youtube.com/embed/hUEvvzlPsHM" title="Tracing Ben (part 1)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <p class="mt-2 text-sm text-gray-300">Tracing Ben (part 1)</p>
+  <p class="mt-2 text-sm text-gray-300 text-center">Tracing Ben (part 1)</p>
 </div>
 
 <!-- Tracing Ben (part 2) -->
 <div class="aspect-w-16 aspect-h-9">
   <iframe class="w-full h-full rounded-lg shadow-lg" src="https://www.youtube.com/embed/vm_PLVFrIHs" title="Tracing Ben (part 2)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <p class="mt-2 text-sm text-gray-300">Tracing Ben (part 2)</p>
+  <p class="mt-2 text-sm text-gray-300 text-center">Tracing Ben (part 2)</p>
 </div>
 
   </main>
