--- a/works/branded-content.html
+++ b/works/branded-content.html
@@ -61,7 +61,8 @@
       <div class="aspect-w-16 aspect-h-9">
         <iframe src="https://player.vimeo.com/video/1055510278" frameborder="0" allowfullscreen class="w-full h-60 sm:h-72 lg:h-64"></iframe>
       </div>
-      <p clas
+      <p class="mt-2 text-sm text-gray-300 text-center">BMW I Project Jupiter Cannes Lions</p>
+    </div>
 
     <div>
       <div class="aspect-w-16 aspect-h-9">
