--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
   </div>
 
   <div class="cv-button">
-    <a href="/cv.pdf" target="_blank">Download CV / Portfolio</a>
+    <a href="/CV.pdf" target="_blank">Download CV / Portfolio</a>
   </div>
 </body>
 </html>
