--- a/index.html
+++ b/index.html
@@ -3,42 +3,54 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>VDO.ape</title>
+  <title>VDO.ape – Home</title>
   <link rel="stylesheet" href="/style.css" />
 </head>
-<body class="bg-black text-white font-sans">
+<body>
 
-  <!-- Header / Logo -->
-  <header class="p-8 text-center">
-    <h1 class="text-5xl font-extrabold tracking-wide mb-6">VDO.ape</h1>
-    <p class="text-base leading-relaxed max-w-xl mx-auto text-gray-300">
-      VDO.ape = "video" + "guerrilla filmmaking"<br><br>
-      I create and support films that are made<br>
-      in order to push the medium of cinema.​<br><br>
-      Those who don't wait for permissions to make films<br>
-      are welcome to collaborate.
-    </p>
-  </header>
-
-<!-- Vimeo Showreel -->
-<section class="flex justify-center p-6">
-  <div class="w-full max-w-7xl aspect-video px-4">
-    <iframe 
-      class="w-full h-full rounded-lg shadow-lg"
-      src="https://player.vimeo.com/video/991421399?title=0&byline=0&portrait=0"
-      frameborder="0"
-      allow="fullscreen"
-    ></iframe>
-  </div>
-</section>
-
-  <!-- Navigation Buttons -->
-  <nav class="flex justify-center gap-6 p-8">
-    <a href="works.html" class="text-white border border-white px-6 py-2 rounded-full hover:bg-white hover:text-black transition">Works</a>
-    <a href="recognitions.html" class="text-white border border-white px-6 py-2 rounded-full hover:bg-white hover:text-black transition">Recognitions</a>
-    <a href="writings.html" class="text-white border border-white px-6 py-2 rounded-full hover:bg-white hover:text-black transition">Writings</a>
-    <a href="about.html" class="text-white border border-white px-6 py-2 rounded-full hover:bg-white hover:text-black transition">About</a>
+  <!-- Navigation -->
+  <nav>
+    <a href="/index.html">Home</a>
+    <a href="/works/ai-films.html">Works</a>
+    <a href="/recognitions.html">Recognitions</a>
+    <a href="/writings.html">Writings</a>
+    <a href="/about.html">About</a>
   </nav>
+
+  <main>
+    <!-- Intro -->
+    <section class="intro">
+      <h1>VDO.ape = "video" + "guerrilla filmmaking"</h1>
+      <p>
+        I create and support films that are made<br>
+        in order to push the medium of cinema.​<br><br>
+
+        Those who don't wait for permissions to make films<br>
+        are welcome to collaborate.
+      </p>
+    </section>
+
+    <!-- Showreel -->
+    <section>
+      <h2>Showreel</h2>
+      <div class="showreel">
+        <iframe 
+          src="https://player.vimeo.com/video/991421399?h=2b3eb4c96a" 
+          frameborder="0" 
+          allow="autoplay; fullscreen; picture-in-picture" 
+          allowfullscreen
+        ></iframe>
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <p>lx_kang@naver.com</p>
+    <p>+86-173-2117-6604</p>
+    <p>WeChat: lx_kang4</p>
+    <p>©2025 Alexander Kang. All Rights Reserved.</p>
+  </footer>
 
 </body>
 </html>
