--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <main>
       <div class="intro">
-        <h1>VDO.ape</h1>
+        <h1>WELCOME.</h1>
       </div>
 
       <div class="showreel">
