--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       }
 
       main {
-        margin-top: 120px;
+        margin-top: 100px; /* Slightly higher */
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -48,7 +48,7 @@
       }
 
       .intro h1 {
-        font-size: 72px;
+        font-size: 96px; /* Bigger text */
         font-weight: 700;
         margin-bottom: 3rem;
       }
@@ -82,7 +82,7 @@
 
     <main>
       <div class="intro">
-        <h1>WELCOME.</h1>
+        <h1>Welcome to My _____</h1>
       </div>
 
       <div class="showreel">
