--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <main>
       <div class="intro">
-        <h1>THIS IS...</h1>
+        <h1>This is...</h1>
       </div>
 
       <div class="showreel">
