--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <body>
     <nav>
       <a href="/index.html">Home</a>
-      <a href="/works/ai-films.html">Works</a>
+      <a href="/works.html">Works</a>
       <a href="/recognitions.html">Recognitions</a>
       <a href="/writings.html">Writings</a>
       <a href="/about.html">About</a>
