--- a/works.html
+++ b/works.html
@@ -4,86 +4,113 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Works | VDO.ape</title>
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     body {
-      margin: 0;
       font-family: 'Space Grotesk', sans-serif;
-      background-color: #d70000;
+      margin: 0;
+      padding: 0;
+      background-color: #e60000; /* Red background */
       color: white;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
     }
-    header {
-      padding: 1rem;
-      text-align: center;
+
+    nav {
       position: fixed;
       top: 0;
       width: 100%;
-      background-color: #d70000;
+      background-color: #e60000;
+      text-align: center;
+      padding: 1rem 0;
       z-index: 1000;
     }
+
     nav a {
-      margin: 0 15px;
-      text-decoration: none;
       color: white;
-      font-weight: 600;
+      text-decoration: none;
+      margin: 0 1.5rem;
+      font-size: 1.1rem;
     }
-    main {
-      flex: 1;
-      padding: 6rem 1rem 2rem;
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    .content {
+      padding-top: 80px;
       text-align: center;
     }
-    .tab-links {
+
+    .tabs {
       display: flex;
-      justify-content: center;
       flex-wrap: wrap;
+      justify-content: center;
+      gap: 2rem;
       margin-top: 2rem;
+      margin-bottom: 2rem;
     }
-    .tab-links a {
-      margin: 1rem;
+
+    .tabs a {
+      background: white;
+      color: #e60000;
       padding: 0.75rem 1.5rem;
-      background-color: white;
-      color: #d70000;
       text-decoration: none;
-      border-radius: 5px;
       font-weight: bold;
+      border-radius: 8px;
+      transition: background 0.3s ease;
     }
+
+    .tabs a:hover {
+      background: #ffe6e6;
+    }
+
+    .collage-container {
+      margin: 2rem auto;
+      max-width: 1000px;
+      width: 90%;
+    }
+
+    .collage-container img {
+      width: 100%;
+      height: auto;
+      display: block;
+      border-radius: 8px;
+    }
+
     footer {
       text-align: center;
-      padding: 2rem 1rem;
-      font-size: 0.875rem;
+      margin: 4rem 0 2rem;
+      font-size: 0.9rem;
       color: white;
     }
   </style>
 </head>
 <body>
-  <header>
-    <nav>
-      <a href="/index.html">Home</a>
-      <a href="/works.html">Works</a>
-      <a href="/recognitions.html">Recognitions</a>
-      <a href="/writings.html">Writings</a>
-      <a href="/about.html">About</a>
-    </nav>
-  </header>
+  <nav>
+    <a href="/index.html">Home</a>
+    <a href="/works.html">Works</a>
+    <a href="/recognitions.html">Recognitions</a>
+    <a href="/writings.html">Writings</a>
+    <a href="/about.html">About</a>
+  </nav>
 
-  <main>
-    <div class="tab-links">
+  <div class="content">
+    <div class="tabs">
       <a href="/works/ai-films.html">AI Films</a>
       <a href="/works/live-action.html">Live Action</a>
       <a href="/works/animation.html">Animation</a>
       <a href="/works/documentary.html">Documentary</a>
       <a href="/works/branded-content.html">Branded Content</a>
     </div>
-  </main>
+
+    <div class="collage-container">
+      <img src="/images/Collage.png" alt="Works Collage">
+    </div>
+  </div>
 
   <footer>
-    <p>lx_kang@naver.com<br>
-    +86-173-2117-6604<br>
-    WeChat: lx_kang4<br>
-    ©2025 Alexander Kang. All Rights Reserved.</p>
+    lx_kang@naver.com · +86-173-2117-6604 · WeChat: lx_kang4<br />
+    ©2025 Alexander Kang. All Rights Reserved.
   </footer>
 </body>
 </html>
