--- a/works.html
+++ b/works.html
@@ -7,12 +7,19 @@
   <link rel="stylesheet" href="/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet" />
   <style>
-    body {
-      font-family: 'Space Grotesk', sans-serif;
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+    }
+
+    html, body {
+      font-family: 'Space Grotesk', sans-serif;
       background-color: #e60000; /* Red background */
       color: white;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
     }
 
     nav {
@@ -37,8 +44,9 @@
     }
 
     .content {
-      padding-top: 80px;
+      padding-top: 100px;
       text-align: center;
+      flex-grow: 1;
     }
 
     .tabs {
@@ -65,9 +73,9 @@
     }
 
     .collage-container {
-      margin: 2rem auto;
-      max-width: 1000px;
-      width: 90%;
+      max-width: 1400px;
+      margin: 3rem auto;
+      padding: 0 1rem;
     }
 
     .collage-container img {
@@ -79,9 +87,10 @@
 
     footer {
       text-align: center;
-      margin: 4rem 0 2rem;
+      padding: 2rem 1rem;
       font-size: 0.9rem;
       color: white;
+      background-color: #e60000;
     }
   </style>
 </head>
