--- a/index.html
+++ b/index.html
@@ -3,102 +3,92 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VDO.ape – Home</title>
-
-    <!-- Google Font: Space Grotesk -->
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet" />
-
-    <!-- Custom Styles -->
+    <title>VDO.ape</title>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
     <style>
       body {
         margin: 0;
-        padding: 0;
         font-family: 'Space Grotesk', sans-serif;
-        background-color: #d60000; /* Red */
+        background-color: #c8102e;
         color: white;
       }
-
-      nav {
+      header {
+        display: flex;
+        justify-content: center;
+        border-bottom: 1px solid white;
         position: fixed;
         top: 0;
         width: 100%;
-        background-color: #d60000;
-        display: flex;
-        justify-content: center;
-        gap: 2rem;
-        padding: 1rem 0;
+        background-color: #c8102e;
         z-index: 1000;
       }
-
+      nav {
+        display: flex;
+        gap: 3rem;
+        padding: 1rem 0;
+        font-size: 1.25rem;
+      }
       nav a {
         color: white;
         text-decoration: none;
-        font-weight: 700;
-        font-size: 16px;
+        position: relative;
       }
-
+      nav a:hover::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: -4px;
+        width: 100%;
+        height: 1px;
+        background-color: white;
+      }
       main {
-        margin-top: 100px; /* Slightly higher */
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        padding-top: 8rem;
         text-align: center;
-        padding: 2rem;
       }
-
-      .intro h1 {
-        font-size: 96px; /* Bigger text */
-        font-weight: 700;
+      h1 {
+        font-size: 3.5rem;
+        font-weight: bold;
         margin-bottom: 3rem;
       }
-
-      .showreel iframe {
-        width: 80vw;
-        height: 45vw;
-        max-width: 1280px;
-        max-height: 720px;
+      iframe {
+        width: 80%;
+        height: 500px;
+        max-width: 960px;
         border: none;
       }
-
       footer {
+        margin-top: 4rem;
+        padding: 2rem;
         text-align: center;
-        padding: 2rem 1rem;
-        font-size: 14px;
-        background-color: #d60000;
-        color: white;
+        border-top: 1px solid white;
+        font-size: 0.9rem;
+        line-height: 1.6;
       }
     </style>
   </head>
-
   <body>
-    <nav>
-      <a href="/index.html">Home</a>
-      <a href="/works.html">Works</a>
-      <a href="/recognitions.html">Recognitions</a>
-      <a href="/writings.html">Writings</a>
-      <a href="/about.html">About</a>
-    </nav>
-
+    <header>
+      <nav>
+        <a href="/index.html">Home</a>
+        <a href="/works.html">Works</a>
+        <a href="/recognitions.html">Recognitions</a>
+        <a href="/writings.html">Writings</a>
+        <a href="/about.html">About</a>
+      </nav>
+    </header>
     <main>
-      <div class="intro">
-        <h1>This is...</h1>
-      </div>
-
-      <div class="showreel">
-        <iframe 
-          src="https://player.vimeo.com/video/991421399?title=0&byline=0&portrait=0"
-          allow="autoplay; fullscreen"
-          allowfullscreen
-        ></iframe>
-      </div>
+      <h1>This is...</h1>
+      <iframe src="https://player.vimeo.com/video/991421399" allowfullscreen></iframe>
     </main>
-
     <footer>
       lx_kang@naver.com<br />
       +86-173-2117-6604<br />
       WeChat: lx_kang4<br />
-      <br />
       ©2025 Alexander Kang. All Rights Reserved.
     </footer>
   </body>
