--- a/index.html
+++ b/index.html
@@ -4,42 +4,45 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VDO.ape</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
     <style>
       body {
         margin: 0;
         font-family: 'Space Grotesk', sans-serif;
-        background-color: #c8102e;
+        background-color: #b10000;
         color: white;
       }
       header {
-        display: flex;
-        justify-content: center;
-        border-bottom: 1px solid white;
         position: fixed;
         top: 0;
         width: 100%;
-        background-color: #c8102e;
+        background-color: #b10000;
+        display: flex;
+        justify-content: center;
+        border-bottom: 1px solid white;
         z-index: 1000;
       }
       nav {
         display: flex;
-        gap: 3rem;
-        padding: 1rem 0;
-        font-size: 1.25rem;
+        gap: 2rem;
+        padding: 1rem;
       }
       nav a {
         color: white;
         text-decoration: none;
+        font-size: 1rem;
+        font-weight: 700;
         position: relative;
       }
       nav a:hover::after {
         content: '';
         position: absolute;
-        left: 0;
         bottom: -4px;
+        left: 0;
         width: 100%;
-        height: 1px;
+        height: 2px;
         background-color: white;
       }
       main {
@@ -47,18 +50,20 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        padding-top: 8rem;
+        height: 100vh;
+        padding-top: 6rem;
         text-align: center;
       }
       h1 {
-        font-size: 3.5rem;
-        font-weight: bold;
-        margin-bottom: 3rem;
+        font-size: 4rem;
+        font-weight: 700;
+        margin-bottom: 2rem;
       }
       iframe {
-        width: 80%;
-        height: 500px;
+        width: 80vw;
+        height: 45vw;
         max-width: 960px;
+        max-height: 540px;
         border: none;
       }
       footer {
@@ -67,7 +72,8 @@
         text-align: center;
         border-top: 1px solid white;
         font-size: 0.9rem;
-        line-height: 1.6;
+        background-color: #b10000;
+        color: white;
       }
     </style>
   </head>
@@ -75,7 +81,7 @@
     <header>
       <nav>
         <a href="/index.html">Home</a>
-        <a href="/works.html">Works</a>
+        <a href="/works/index.html">Works</a>
         <a href="/recognitions.html">Recognitions</a>
         <a href="/writings.html">Writings</a>
         <a href="/about.html">About</a>
@@ -83,13 +89,13 @@
     </header>
     <main>
       <h1>This is...</h1>
-      <iframe src="https://player.vimeo.com/video/991421399" allowfullscreen></iframe>
+      <iframe src="https://player.vimeo.com/video/991421399?h=85025aa26e" allowfullscreen></iframe>
     </main>
     <footer>
-      lx_kang@naver.com<br />
-      +86-173-2117-6604<br />
-      WeChat: lx_kang4<br />
-      ©2025 Alexander Kang. All Rights Reserved.
+      <div>lx_kang@naver.com</div>
+      <div>+86-173-2117-6604</div>
+      <div>WeChat: lx_kang4</div>
+      <div>©2025 Alexander Kang. All Rights Reserved.</div>
     </footer>
   </body>
 </html>
