--- a/index.html
+++ b/index.html
@@ -1,101 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VDO.ape</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-      body {
-        margin: 0;
-        font-family: 'Space Grotesk', sans-serif;
-        background-color: #b10000;
-        color: white;
-      }
-      header {
-        position: fixed;
-        top: 0;
-        width: 100%;
-        background-color: #b10000;
-        display: flex;
-        justify-content: center;
-        border-bottom: 1px solid white;
-        z-index: 1000;
-      }
-      nav {
-        display: flex;
-        gap: 2rem;
-        padding: 1rem;
-      }
-      nav a {
-        color: white;
-        text-decoration: none;
-        font-size: 1rem;
-        font-weight: 700;
-        position: relative;
-      }
-      nav a:hover::after {
-        content: '';
-        position: absolute;
-        bottom: -4px;
-        left: 0;
-        width: 100%;
-        height: 2px;
-        background-color: white;
-      }
-      main {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        padding-top: 6rem;
-        text-align: center;
-      }
-      h1 {
-        font-size: 4rem;
-        font-weight: 700;
-        margin-bottom: 2rem;
-      }
-      iframe {
-        width: 80vw;
-        height: 45vw;
-        max-width: 960px;
-        max-height: 540px;
-        border: none;
-      }
-      footer {
-        margin-top: 4rem;
-        padding: 2rem;
-        text-align: center;
-        border-top: 1px solid white;
-        font-size: 0.9rem;
-        background-color: #b10000;
-        color: white;
-      }
-    </style>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <a href="/index.html">Home</a>
-        <a href="/works/index.html">Works</a>
-        <a href="/recognitions.html">Recognitions</a>
-        <a href="/writings.html">Writings</a>
-        <a href="/about.html">About</a>
-      </nav>
-    </header>
-    <main>
-      <h1>This is...</h1>
-      <iframe src="https://player.vimeo.com/video/991421399?h=85025aa26e" allowfullscreen></iframe>
-    </main>
-    <footer>
-      <div>lx_kang@naver.com</div>
-      <div>+86-173-2117-6604</div>
-      <div>WeChat: lx_kang4</div>
-      <div>©2025 Alexander Kang. All Rights Reserved.</div>
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>VDO.ape</title>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="/style.css" />
+  <style>
+    body {
+      font-family: 'Space Grotesk', sans-serif;
+      background-color: #b30000;
+      color: white;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background-color: #b30000;
+      padding: 1rem 0;
+      z-index: 1000;
+    }
+
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      font-size: 1.1rem;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: white;
+      position: relative;
+    }
+
+    nav a::after {
+      content: '';
+      position: absolute;
+      bottom: -4px;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background-color: white;
+      transform: scaleX(0);
+      transition: transform 0.3s ease;
+      transform-origin: left;
+    }
+
+    nav a:hover::after {
+      transform: scaleX(1);
+    }
+
+    .content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+      padding-top: 6rem;
+    }
+
+    .intro-text {
+      font-size: 3.5rem;
+      font-weight: bold;
+      margin-bottom: 2rem;
+    }
+
+    .showreel {
+      width: 80%;
+      max-width: 900px;
+    }
+
+    footer {
+      text-align: center;
+      padding: 2rem;
+      background-color: #b30000;
+      color: white;
+      border-top: 1px solid white;
+    }
+
+    footer p {
+      margin: 0.5rem 0;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <nav>
+      <a href="/index.html">Home</a>
+      <a href="/works/index.html">Works</a>
+      <a href="/recognitions.html">Recognitions</a>
+      <a href="/writings.html">Writings</a>
+      <a href="/about.html">About</a>
+    </nav>
+  </header>
+
+  <div class="content">
+    <div class="intro-text">Welcome to My _____</div>
+    <div class="showreel">
+      <iframe src="https://player.vimeo.com/video/991421399?h=9e0467cf5c" width="100%" height="480" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    </div>
+  </div>
+
+  <footer>
+    <p>lx_kang@naver.com</p>
+    <p>+86-173-2117-6604</p>
+    <p>WeChat: lx_kang4</p>
+    <p>©2025 Alexander Kang. All Rights Reserved.</p>
+  </footer>
+
+</body>
 </html>
