--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>VDO.ape</title>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="/style.css" />
   <style>
     body {
+      margin: 0;
+      padding: 0;
       font-family: 'Space Grotesk', sans-serif;
       background-color: #b30000;
       color: white;
-      margin: 0;
-      padding: 0;
     }
 
     header {
@@ -20,34 +19,35 @@
       top: 0;
       width: 100%;
       background-color: #b30000;
-      padding: 1rem 0;
       z-index: 1000;
+      padding: 1rem 0;
+      border-bottom: 1px solid white;
     }
 
     nav {
       display: flex;
       justify-content: center;
       gap: 2rem;
-      font-size: 1.1rem;
     }
 
     nav a {
-      text-decoration: none;
       color: white;
+      text-decoration: none;
+      font-size: 1.1rem;
       position: relative;
     }
 
     nav a::after {
       content: '';
       position: absolute;
-      bottom: -4px;
-      left: 0;
       width: 100%;
       height: 1px;
       background-color: white;
+      left: 0;
+      bottom: -4px;
       transform: scaleX(0);
-      transition: transform 0.3s ease;
       transform-origin: left;
+      transition: transform 0.3s ease;
     }
 
     nav a:hover::after {
@@ -55,36 +55,34 @@
     }
 
     .content {
+      padding-top: 7rem;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      height: 100vh;
-      text-align: center;
-      padding-top: 6rem;
     }
 
     .intro-text {
-      font-size: 3.5rem;
+      font-size: 4rem;
       font-weight: bold;
-      margin-bottom: 2rem;
+      margin-bottom: 3rem;
     }
 
-    .showreel {
+    iframe {
       width: 80%;
-      max-width: 900px;
+      max-width: 960px;
+      height: 540px;
+      border: none;
     }
 
     footer {
+      margin-top: 4rem;
       text-align: center;
       padding: 2rem;
-      background-color: #b30000;
-      color: white;
       border-top: 1px solid white;
     }
 
     footer p {
-      margin: 0.5rem 0;
+      margin: 0.3rem 0;
     }
   </style>
 </head>
@@ -102,9 +100,7 @@
 
   <div class="content">
     <div class="intro-text">Welcome to My _____</div>
-    <div class="showreel">
-      <iframe src="https://player.vimeo.com/video/991421399?h=9e0467cf5c" width="100%" height="480" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-    </div>
+    <iframe src="https://player.vimeo.com/video/991421399?h=9e0467cf5c" allowfullscreen></iframe>
   </div>
 
   <footer>
