--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   </header>
 
   <div class="content">
-    <div class="intro-text">Welcome to My _____</div>
+    <div class="intro-text">This is...</div>
     <iframe src="https://player.vimeo.com/video/991421399?h=9e0467cf5c" allowfullscreen></iframe>
   </div>
 
