--- a/index.html
+++ b/index.html
@@ -104,10 +104,8 @@
   </div>
 
   <footer>
-    <p>lx_kang@naver.com</p>
-    <p>+86-173-2117-6604</p>
-    <p>WeChat: lx_kang4</p>
-    <p>©2025 Alexander Kang. All Rights Reserved.</p>
+    lx_kang@naver.com · +86-173-2117-6604 · WeChat: lx_kang4<br />
+    ©2025 Alexander Kang. All Rights Reserved.
   </footer>
 
 </body>
