--- a/index.html
+++ b/index.html
@@ -99,13 +99,15 @@
   </header>
 
   <div class="content">
-    <div class="intro-text">This is...</div>
+    <div class="intro-text">Welcome to My _____</div>
     <iframe src="https://player.vimeo.com/video/991421399?h=9e0467cf5c" allowfullscreen></iframe>
   </div>
 
   <footer>
-    lx_kang@naver.com · +86-173-2117-6604 · WeChat: lx_kang4<br />
-    ©2025 Alexander Kang. All Rights Reserved.
+    <p>lx_kang@naver.com</p>
+    <p>+86-173-2117-6604</p>
+    <p>WeChat: lx_kang4</p>
+    <p>©2025 Alexander Kang. All Rights Reserved.</p>
   </footer>
 
 </body>
