--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <header>
     <nav>
       <a href="/index.html">Home</a>
-      <a href="/works/index.html">Works</a>
+      <a href="/works/">Works</a>
       <a href="/recognitions.html">Recognitions</a>
       <a href="/writings.html">Writings</a>
       <a href="/about.html">About</a>
