--- a/works.html
+++ b/works.html
@@ -11,7 +11,7 @@
       body {
         margin: 0;
         font-family: 'Space Grotesk', sans-serif;
-        background-color: #c1121f;
+        background-color: #b30000;
         color: white;
       }
       header, footer {
