--- a/works.html
+++ b/works.html
@@ -91,6 +91,7 @@
       padding: 2rem 1rem;
       font-size: 0.9rem;
       line-height: 1.6;
+      color: white;
       background-color: #ff0000;
     }
   </style>
