--- a/works.html
+++ b/works.html
@@ -17,7 +17,7 @@
 
     html, body {
       height: 100%;
-      background-color: #ff0000;
+      background-color: #0719f5;
       color: white;
       font-family: 'Space Grotesk', sans-serif;
     }
@@ -36,7 +36,7 @@
       padding: 1.5rem 0;
       font-size: 1.25rem;
       font-weight: 700;
-      background-color: #ff0000;
+      background-color: #0719f5;
     }
 
     .nav a {
@@ -82,7 +82,7 @@
 
     .subtabs a:hover {
       background-color: white;
-      color: #ff0000;
+      color: #0719f5;
     }
 
     /* Footer */
@@ -92,7 +92,7 @@
       font-size: 0.9rem;
       line-height: 1.6;
       color: white;
-      background-color: #ff0000;
+      background-color: #0719f5;
     }
   </style>
 </head>
