--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
 <body>
 
   <header>
-    <nav>
-      <a href="/index.html">Home</a>
-      <a href="/works/">Works</a>
-      <a href="/recognitions.html">Recognitions</a>
-      <a href="/writings.html">Writings</a>
-      <a href="/about.html">About</a>
-    </nav>
+<nav class="nav">
+  <a href="/">Home</a>
+  <a href="/works/">Works</a>
+  <a href="/recognitions.html">Recognitions</a>
+  <a href="/writings.html">Writings</a>
+  <a href="/about.html">About</a>
+</nav>
   </header>
 
   <div class="content">
