--- a/index.html
+++ b/index.html
@@ -89,26 +89,25 @@
 <body>
 
   <header>
-<nav class="nav">
-  <a href="/">Home</a>
+<header class="nav">
+  <a href="/index.html">Home</a>
   <a href="/works/">Works</a>
   <a href="/recognitions.html">Recognitions</a>
   <a href="/writings.html">Writings</a>
   <a href="/about.html">About</a>
-</nav>
-  </header>
+</header>
 
   <div class="content">
     <div class="intro-text">This is...</div>
     <iframe src="https://player.vimeo.com/video/991421399?h=9e0467cf5c" allowfullscreen></iframe>
   </div>
 
-  <footer>
-    <p>lx_kang@naver.com</p>
-    <p>+86-173-2117-6604</p>
-    <p>WeChat: lx_kang4</p>
-    <p>©2025 Alexander Kang. All Rights Reserved.</p>
-  </footer>
+  <footer class="footer">
+  <p>lx_kang@naver.com</p>
+  <p>+86-173-2117-6604</p>
+  <p>WeChat: lx_kang4</p>
+  <p>©2025 Alexander Kang. All Rights Reserved.</p>
+</footer>
 
 </body>
 </html>
