--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </head>
 <body>
 
-  <header>
+<!-- Header -->
 <header class="nav">
   <a href="/index.html">Home</a>
   <a href="/works/">Works</a>
@@ -97,12 +97,10 @@
   <a href="/about.html">About</a>
 </header>
 
-  <div class="content">
-    <div class="intro-text">This is...</div>
-    <iframe src="https://player.vimeo.com/video/991421399?h=9e0467cf5c" allowfullscreen></iframe>
-  </div>
+<!-- Your main content goes here -->
 
-  <footer class="footer">
+<!-- Footer -->
+<footer class="footer">
   <p>lx_kang@naver.com</p>
   <p>+86-173-2117-6604</p>
   <p>WeChat: lx_kang4</p>
